$Id$

Delete fake XPathAPI, use javax.xml.xpath API instead.
Add 'factory' attribute to set the XPath factory implementation.
Add 'sourceProperty' attribute to use a property as the source.

1.16.1 27/10/2009

Now 1.5 compatible

1.16   22/09/2009

Release of 1.16c

1.16c  14/09/2009

Copying/cutting to properties now supports the 'append' functionality. Additional
'trim' and 'propertySeparator' functions for these.
Pre 1.5 support removed

1.16b  13/08/2009

Regular expression implementation
Copy/Cut on attributes to properties no longer requires 'attrValue'
Better logging

1.15.1 23/06/2007

Corrected buffer pasting ordering

1.15   04/05/2007

Buffers now persisted to file systems when
using the file:// prefix

1.14.2 26/04/2007

Build tweaks. Directory exclusion

1.14.1 14/02/2007

Bug fixes for literal XML insertion and 'standalone' output

1.14 11/11/2006

Now buffers are preserved across instances of xmltask
Added if/unless capability to most instructions

1.13 17/09/2006

Added the <uncomment> task

1.12.1 24/07/2006

Added <xmlcatalog> error message
Fixed NPE and allowed <replace> to insert into attribute values

1.12 18/05/2006

Added expandProperties attribute to <insert> and <replace>
The <call> mechanism now supports embedded actions i.e. you
don't have to call out to a subtarget. Thanks to Maarten Coene

1.11.4 22/03/2006

Now handles IBM JVM and related classloading issues

1.11.3 16/02/2006

Changes to cope with JDK 1.6 beta

1.11.2 30/01/2006

Reversed ordering of element insertion from buffers. Now intuitive

1.11.1b 23/08/2005

Now allows expansion of entity references to be enabled/disabled (tests 40/99)

1.11.1 09/08/2005

Now handles an <xmltask> invocation without source or dest (test 98)

1.11 30/06/2005

New web page
Now uses java.version to identify VM and thus XPath usage
Errors when inserting before/after root nodes
Fixed source packaging wrt. XMLCatalog.class
Fixed possible infinite loop in insert statement