@@ -30,6 +30,7 @@ I Wayan Saryada         - wsaryada@balicamp.com
 Maarten Coene           - maarten_coene@yahoo.com
 Stacey Murphy           - stacey.murphy@ericsson.com
 Jose Rojas              - jrojas@redlinesolutions.co
+Adam Retter             - adam.retter@googlemail.com
 
 Thanks to Dave Megginson (info@megginson.com) for the use
 of the XMLWriter and DataWriter classes (now somewhat
